--- a/index.html
+++ b/index.html
@@ -1,50 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Single Price Grid Component</title>
+  </head>
+  <body>
+    <main class="pricing-component">
+      <section class="pricing-component__intro">
+        <h1 class="pricing-component__title">Join our community</h1>
+        <p class="pricing-component__intro-text">
+          30-day, hassle-free money back <span class="break">guarantee</span>
+        </p>
+        <p class="pricing-component__intro--description">
+          Gain access to our full library of tutorials along with expert code
+          reviews. Perfect for any developers who are serious about honing their
+          skills.
+        </p>
+      </section>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
+      <section class="pricing-component__pricing">
+        <h2 class="pricing-component__pricing--title">Monthly Subscription</h2>
+        <div class="pricing-component__pricing--price">
+          <span class="pricing-component__pricing--cost">&dollar;29 </span>
+          <span class="pricing-component__pricing--period">per month</span>
+        </div>
+        <p class="pricing-component__pricing--description">
+          Full access for less than &dollar;1 a day
+        </p>
+        <button class="button">Sign Up</button>
+      </section>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+      <section class="pricing-component__features">
+        <h2>Why Us</h2>
+        <ul class="pricing-component__features--list">
+          <li class="pricing-component__features--list-item">
+            Tutorials by industry experts Peer.
+          </li>
+          <li class="pricing-component__features--list-item">
+            expert code review.
+          </li>
+          <li class="pricing-component__features--list-item">
+            Coding exercises.
+          </li>
+          <li class="pricing-component__features--list-item">
+            Access to our GitHub repos.
+          </li>
+          <li class="pricing-component__features--list-item">
+            Community forum.
+          </li>
+          <li class="pricing-component__features--list-item">
+            Flashcard decks.
+          </li>
+          <li class="pricing-component__features--list-item">
+            New videos every week.
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
