--- a/index.html
+++ b/index.html
@@ -13,12 +13,20 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="A responsive single price grid component built with semantic HTML and modern CSS. Showcases clear pricing, features, and call-to-action in a clean layout."
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Single Price Grid Component</title>
   </head>
   <body>
     <main class="pricing-component" role="main">
-      <section class="pricing-component__intro" area aria-labelledby="intro-title">
+      <section
+        class="pricing-component__intro"
+        area
+        aria-labelledby="intro-title"
+      >
         <h1 class="pricing-component__title">Join our community</h1>
         <p class="pricing-component__intro-text">
           30-day, hassle-free money back <span class="break">guarantee</span>
@@ -31,7 +39,11 @@
       </section>
 
       <div class="pricing-component__bottom">
-        <section class="pricing-component__pricing" area aria-labelledby="pricing-title">
+        <section
+          class="pricing-component__pricing"
+          area
+          aria-labelledby="pricing-title"
+        >
           <h2 class="pricing-component__pricing--title">
             Monthly Subscription
           </h2>
@@ -45,7 +57,11 @@
           <button class="button">Sign Up</button>
         </section>
 
-        <section class="pricing-component__features" area aria-labelledby="why-us-title">
+        <section
+          class="pricing-component__features"
+          area
+          aria-labelledby="why-us-title"
+        >
           <h2 class="pricing-component__features--title">Why Us</h2>
           <ul class="pricing-component__features--list">
             <li class="pricing-component__features--list-item">
