--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <meta
       name="description"
-      content="A responsive single price grid component built with semantic HTML and modern CSS. Showcases clear pricing, features, and call-to-action in a clean layout."
+      content="A responsive single price grid component built with semantic HTML and modern CSS. Showcases clear pricing, features, in a clean layout."
     />
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Single Price Grid Component</title>
